# whatsapp-mcp

./: .env.example  .env.template  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEDIA_SENDING.md  README.md  docker-compose.yml  download_audio.py  download_doc.py  go.mod  go.sum  main.go  main.py  pyproject.toml  schema.sql
cmd/migrate/: main.go
config/: env.go
docs/superpowers/plans/: 2026-04-30-audio-transcription.md
mcp/: handlers.go  prompts.go  resources.go  server.go  tools.go
migrations/: 00001_initial_schema.go
paths/: paths.go
smoketest-fixtures/: run.sh
storage/: chats.go  db.go  media.go  message_states.go  message_states_test.go  messages.go  migrator.go  models.go  push_names.go  transcripts.go  transcripts_test.go  webhooks.go
storage/migrations/: 001_initial_schema.sql  002_add_webhooks.sql  003_add_message_states_and_reactions.sql  004_add_transcripts.sql
webhook/: config.go  delivery.go  handler.go  webhook.go
whatsapp/: audio.go  audio_test.go  client.go  config.go  handlers.go  media.go  media_flush.go  media_lazy.go  outbound.go  outbound_media.go  outbound_media_test.go  transcribe.go  transcribe_backend.go  transcribe_batch.go  transcribe_config.go  transcribe_dump.go  transcribe_live_test.go  transcribe_openrouter.go  transcribe_openrouter_test.go  transcribe_test.go
whatsapp-mcp-server/: auth.py  main.py  pyproject.toml  requirements.txt  whatsapp.py
whatsapp-mcp-server/templates/: keys.html  login.html  register.html
whatsapp_mcp/: __init__.py  auth.py  cli.py  config.py  server.py  utils.py  wuzapi_client.py
