[project]
name = "whatsapp-mcp"
version = "0.1.0"
description = "Self-hosted Whatsapp MCP service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "fastmcp>=2.8.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

fix = true
show-fixes = true
output-format = "grouped"

# Excluir diretórios comumente ignorados
extend-exclude = [
    "migrations/*"
]

# Seleção de regras - configuração extensiva baseada na documentação
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "RUF", # ruff-specific rules
    # "D",   # pydocstyle
    "ANN", # flake8-annotations
    # "S",   # flake8-bandit
    # "T",   # flake8-debugger
]


# Ignorar regras específicas que podem ser muito restritivas
lint.ignore = [
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "ANN001", # Missing type annotation for self in method
    "ANN002",  # Missing type annotation for cls in classmethod
    "ANN003",  # Missing type annotation for kwargs
    "ANN204",  # Missing return type annotation for public function
    "ANN201",  # Missing return type undocumented public function
    "ANN202", # Missing type annotation for private function
]

# Ativar fixação automática para todas as regras selecionadas
lint.fixable = ["ALL"]
lint.unfixable = []

lint.isort.known-first-party = ["back"]
lint.isort.section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lint.isort.combine-as-imports = true

lint.pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
